# agentsentry-hackathon

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: azure-static-web-apps.yml  deploy-api.yml  deploy-infrastructure.yml
demo/: README.md  __init__.py  attack_demo.py  http_agent.py  vulnerable_agent.py
docs/: AI_SECURITY_PRIMER.md  ARCHITECTURE.md  ATTACKS.md  ATTACK_WALKTHROUGH.md  AZURE_DEPLOY.md  GEMINI_SLIDES_PROMPT.md  MISSION_CONTROL_DEMO.md  PITCH_DECK_PLAN.md  SCAN_AND_GUARD_FLOW.md
infra/: README.md  deploy.sh  main.bicep  main.json  main.parameters.json.example
infra/cost-guard/: Stop-AgentSentryApi.ps1  resume-api.sh  setup.sh  stop-now.sh
infra/modules/: appInsights.bicep  containerApp.bicep  containerRegistry.bicep  managedEnvironment.bicep  staticWebApp.bicep
mission-control/: README.md  package-lock.json  package.json  staticwebapp.config.json
mission-control/src/app/: globals.css  layout.tsx  page.tsx
mission-control/src/components/: AppShell.tsx  AttackCoverageChart.tsx  EmptyState.tsx  ErrorState.tsx  EvidenceTrace.tsx  FindingsTable.tsx  LoadingState.tsx  PostureGauge.tsx  Providers.tsx  RuntimeEventFeed.tsx  ScanTriggerDialog.tsx  ThemeCoverageSummary.tsx
mission-control/src/lib/: api.ts  attacks.ts  posture.ts  statusSurfaces.ts  telemetry.ts
mission-control/src/types/: api.ts
src/agentsentry/: __init__.py  cli.py  config.py  main.py
src/agentsentry/api/: agents.py  runtime.py  scans.py
src/agentsentry/attacks/: __init__.py  base.py  confused_deputy.py  exfiltration_url.py  identity_spoofing.py  indirect_injection.py  memory_poisoning.py  registry.py  tool_poisoning.py
src/agentsentry/guard/: __init__.py  events.py  policy.py  shields.py  wrapper.py
src/agentsentry/models/: __init__.py  agent.py  attack.py  finding.py  scan.py
src/agentsentry/scoring/: __init__.py  llm_judge.py
src/agentsentry/services/: __init__.py  azure_clients.py  scan_runner.py  target_client.py
tests/: test_api.py  test_attacks.py  test_guard.py  test_indirect_injection.py  test_scan_runner.py
(+10 files in other folders)
