[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentsentry"
version = "0.1.0"
description = "Unified Scan + Guard + Audit plane for agent fleets. Built on PyRIT, Prompt Shields, and Microsoft Agent Framework."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Sachin Kasana" }]
keywords = ["ai-security", "agentic-systems", "prompt-injection", "red-teaming", "microsoft-agent-framework", "pyrit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# Azure integrations — needed Day 2+ when wiring real services
azure = [
    "openai>=1.40.0",
    "azure-identity>=1.17.0",
    "azure-ai-contentsafety>=1.0.0",
    "azure-cosmos>=4.7.0",
    "azure-monitor-opentelemetry>=1.6.0",
]

# Microsoft Agent Framework — for the target/demo agent
agents = [
    "agent-framework>=1.0.0",  # Microsoft Agent Framework (Python)
]

# PyRIT — Microsoft's red-teaming toolkit
pyrit = [
    "pyrit>=0.7.0",
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

all = ["agentsentry[azure,agents,pyrit,dev]"]

[project.scripts]
agentsentry = "agentsentry.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentsentry"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
